Support actuators in config
UX changes